--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+TwoMinTimer/.DS_Store
+TwoMinTimer/buildServer.json
